--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MPChart01</string>
+    <string name="app_name">Bits N Bourbon Bitcoin App</string>
 </resources>
