--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BTC Brunch App</string>
+    <string name="app_name">BTC Brunch Bitcoin App</string>
 
     <string-array name="stock_tickers">
         <item>CORN</item>
